--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.3.3",
     "underscore": "*",
-    "consolidate": "*"
+    "consolidate": "*",
+    "inireader": "*"
   }
 }
